--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -227,7 +227,7 @@
 
     .form-settings label {
         clear: both;
-        span.setting_description {
+        span.setting-description {
             float: left;
             display: inline-block; 
             width: 20em;
