--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -230,14 +230,16 @@
         span.setting-description {
             float: left;
             display: inline-block; 
-            width: 20em;
+            width: 23em;
         }
         div.slider {
             display: inline-block;
             width: 20em;
         }
-        code {
+        span input {
+            float: right;
             margin: 0 1em;
+            width: 3em;
         }
         input[type="range"] {
             width: 20em;
