--- a/fontsampler-admin.css
+++ b/fontsampler-admin.css
@@ -81,7 +81,7 @@
 #fontsampler-admin label {
   display: block;
   font-family: monospace;
-  color: #999;
+  color: #666;
   margin: 1em 0;
 }
 #fontsampler-admin .submit {
@@ -162,6 +162,7 @@
 }
 #fontsampler-admin small {
   font-size: x-small;
+  font-family: sans-serif;
   line-height: 1em;
 }
 #fontsampler-admin .notice {
@@ -266,6 +267,12 @@
   display: block;
   margin-left: 40px;
 }
+#fontsampler-admin #fontsampler-options-checkboxes {
+  display: block;
+}
+#fontsampler-admin #fontsampler-options-checkboxes.use-defaults {
+  display: none;
+}
 #fontsampler-admin .fontsampler-admin-column-half {
   float: left;
   margin-right: 5%;
@@ -274,10 +281,13 @@
 #fontsampler-admin .form-settings label {
   clear: both;
 }
-#fontsampler-admin .form-settings label span.setting-description {
-  float: left;
+#fontsampler-admin .form-settings label span.setting-description,
+#fontsampler-admin .form-settings label small {
   display: inline-block;
   width: 23em;
+}
+#fontsampler-admin .form-settings label span.styling-description {
+  float: left;
 }
 #fontsampler-admin .form-settings label div.slider {
   display: inline-block;
@@ -291,8 +301,16 @@
 #fontsampler-admin .form-settings label input[type="range"] {
   width: 20em;
 }
+#fontsampler-admin .form-settings label textarea {
+  clear: both;
+  display: block;
+}
 #fontsampler-admin .form-settings label small {
   display: block;
+  margin-bottom: 1em;
+}
+#fontsampler-admin .form-settings label input[type="text"] {
+  width: 9em;
 }
 #fontsampler-admin ul.fontsampler-ui-preview-list {
   border: 1px dotted #ccc;
