--- a/fontsampler-css.css
+++ b/fontsampler-css.css
@@ -293,7 +293,7 @@
   float: left;
   position: relative;
   padding: 0 5px;
-  width: 33%;
+  width: 32%;
 }
 .fontsampler-wrapper .fontsampler-interface label.fontsampler-slider:first-of-type {
   left: -5px;
@@ -326,7 +326,7 @@
   left: -5px;
   padding: 0 5px;
   margin-right: 5px;
-  width: 33%;
+  width: 32%;
 }
 .fontsampler-wrapper .fontsampler-interface select[name="alignment"],
 .fontsampler-wrapper .fontsampler-interface select[name="invert"],
@@ -406,12 +406,10 @@
 .fontsampler-wrapper .fontsampler {
   clear: both;
   margin-bottom: 20px;
-  padding: 10px 20px;
   transition: all 0.2s ease-out;
 }
-.fontsampler-wrapper .fontsampler.invert {
-  background: #333333;
-  color: #ffffff;
+.fontsampler-wrapper .fontsampler:focus {
+  outline: none;
 }
 /* css_color_text */
 .fontsampler-interface .fontsampler {
