--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -272,7 +272,7 @@
     ul.fontsampler-ui-preview-list {
         border: 1px dotted #ccc;
         background: #fff;
-        min-height: 3em;
+        min-height: 4em;
         margin: 5px 0;
         padding: 5px 0;
         width: 50em;
@@ -288,7 +288,7 @@
             margin-left: 1.5%;
             width: 30%;
             position:relative;
-            min-height: 3em;
+            min-height: 4em;
 
             &.fontsampler-ui-placeholder-full {
                 width: 97%;
@@ -297,6 +297,12 @@
         .ui-state-highlight {
             background: transparent;
             border: 1px dotted orange;
+        }
+    }
+
+    ul.fontsampler-ui-preview-placeholder {
+        li {
+            display: none;
         }
     }
 
