--- a/fontsampler-interface.less
+++ b/fontsampler-interface.less
@@ -175,6 +175,7 @@
             background: #ffffff;
             height: 30px;
             padding: 5px;
+			z-index: 10;
 
             &.shown {
                 display: block;
