--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -309,4 +309,8 @@
     #fontsampler-fontset-from {
         max-width: 50em;
     }
+
+    #fontsampler-edit-sample textarea[name="initial"] {
+        width: 100%;
+    }
 }
