--- a/fontsampler-interface.less
+++ b/fontsampler-interface.less
@@ -192,6 +192,7 @@
 	.fontsampler {
 	    clear: both;
 	    margin-bottom: 20px;
+		margin-top: 0.25em;
 		transition: all 0.2s ease-out;
 
 		&:focus {
