--- a/fontsampler-interface.css
+++ b/fontsampler-interface.css
@@ -407,6 +407,7 @@
 .fontsampler-wrapper .fontsampler {
   clear: both;
   margin-bottom: 20px;
+  margin-top: 0.25em;
   transition: all 0.2s ease-out;
 }
 .fontsampler-wrapper .fontsampler:focus {
