fixed bug that caused fontpicker not to show in the interface

--- a/fontsampler-css.css
+++ b/fontsampler-css.css
@@ -415,10 +415,10 @@
 }
 /* css_color_text */
 .fontsampler-interface .fontsampler {
-    color: #333333;
+    color: #ac6161;
 }
 .fontsampler-interface .fontsampler.invert {
-    background: #333333;
+    background: #ac6161;
 }
 
 /* css_color_background */
