--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -1,4 +1,5 @@
 @import "fontsampler-custom-rangeslider.less";
+
 /*
  * Scope all css to be contained only within the fontsampler wrapper
  */
@@ -237,7 +238,7 @@
     .form-settings label {
         clear: both;
         span.setting-description, small {
-            display: inline-block; 
+            display: inline-block;
             width: 23em;
         }
         span.styling-description {
@@ -287,7 +288,7 @@
             margin-right: 1.5%;
             margin-left: 1.5%;
             width: 30%;
-            position:relative;
+            position: relative;
             min-height: 4em;
 
             &.fontsampler-ui-placeholder-full {
@@ -312,5 +313,26 @@
 
     #fontsampler-edit-sample textarea[name="initial"] {
         width: 100%;
+    }
+
+    .fontsampler-initial-font-selection {
+        display: inline-block;
+    }
+    .fontsampler-initial-font {
+        &.selected {
+            span.initial-font-selected {
+                display: inline-block;
+            }
+            span.initial-font-unselected {
+                display: none;
+            }
+        }
+        span.initial-font-selected {
+            display: none;
+        }
+        span.initial-font-unselected {
+            display: inline-block;
+        }
+
     }
 }
