--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -1,4 +1,5 @@
 @import "fontsampler-custom-rangeslider.less";
+@import "admin-settings.less";
 
 /*
  * Scope all css to be contained only within the fontsampler wrapper
@@ -235,39 +236,7 @@
         width: 45%;
     }
 
-    .form-settings label {
-        clear: both;
-        span.setting-description, small {
-            display: inline-block;
-            width: 23em;
-        }
-        span.styling-description {
-            float: left;
-        }
-        div.slider {
-            display: inline-block;
-            width: 20em;
-        }
-        span input {
-            float: right;
-            margin: 0 1em;
-            width: 3em;
-        }
-        input[type="range"] {
-            width: 20em;
-        }
-        textarea {
-            clear: both;
-            display: block;
-        }
-        small {
-            display: block;
-            margin-bottom: 1em;
-        }
-        input[type="text"] {
-            width: 9em;
-        }
-    }
+
 
     // fontsampler UI sortable
     ul.fontsampler-ui-preview-list {
