implemented #19 allowing to set fontsamplers as multiline or singleline

--- a/fontsampler-css.css
+++ b/fontsampler-css.css
@@ -413,6 +413,11 @@
 .fontsampler-wrapper .fontsampler:focus {
   outline: none;
 }
+.fontsampler-wrapper .fontsampler.fontsampler-is-singleline {
+  overflow-x: hidden;
+  overflow-y: visible;
+  white-space: nowrap;
+}
 /* css_color_text */
 .fontsampler-interface .fontsampler {
     color: #ac6161;
