--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -1,5 +1,6 @@
 @import "fontsampler-custom-rangeslider.less";
 @import "admin-settings.less";
+@import "admin-sampler.less";
 
 /*
  * Scope all css to be contained only within the fontsampler wrapper
