--- a/fontsampler-admin.less
+++ b/fontsampler-admin.less
@@ -208,6 +208,11 @@
         }
     }
 
+    // any sort of hidden placeholder
+    .fontsampler-admin-placeholders {
+        display: none;
+    }
+
     // wrapper with label > span + input[type=checkbox]
     .fontsampler-options-checkbox {
         label > span {
