folder refactoring and cleanup

--- a/admin/css/fontsampler-admin.less
+++ b/admin/css/fontsampler-admin.less
@@ -1,4 +1,4 @@
-@import "fontsampler-custom-rangeslider.less";
+@import "../../css/fontsampler-custom-rangeslider.less";
 @import "admin-settings.less";
 @import "admin-sampler.less";
 
