--- a/css/fontsampler-css.css
+++ b/css/fontsampler-css.css
@@ -420,10 +420,10 @@
 }
 /* css_color_text */
 .fontsampler-interface .fontsampler {
-    color: #ac6161;
+    color: #d61313;
 }
 .fontsampler-interface .fontsampler.invert {
-    background: #ac6161;
+    background: #d61313;
 }
 
 /* css_color_background */
