rudimentary pagination implementation for 'Fonts & Files' tab, adaptable for 'Font samplers' as well, 50% of #34

--- a/admin/css/fontsampler-admin.less
+++ b/admin/css/fontsampler-admin.less
@@ -1,6 +1,7 @@
 @import "../../css/fontsampler-custom-rangeslider.less";
 @import "admin-settings.less";
 @import "admin-sampler.less";
+@import "admin-fontsets.less";
 
 /*
  * Scope all css to be contained only within the fontsampler wrapper
