--- a/admin/css/fontsampler-admin.css
+++ b/admin/css/fontsampler-admin.css
@@ -70,7 +70,7 @@
   clear: both;
 }
 #fontsampler-admin .form-settings label span.setting-description,
-#fontsampler-admin .form-settings label small {
+#fontsampler-admin .form-settings label .fontsampler-admin-settings-styling small {
   display: inline-block;
   width: 23em;
 }
@@ -81,7 +81,8 @@
   display: inline-block;
   width: 20em;
 }
-#fontsampler-admin .form-settings label span input {
+#fontsampler-admin .form-settings label span input[type="text"],
+#fontsampler-admin .form-settings label span input.current-value {
   float: right;
   margin: 0 1em;
   width: 3em;
@@ -155,7 +156,6 @@
 }
 #fontsampler-admin label {
   display: block;
-  font-family: monospace;
   color: #666;
   margin: 1em 0;
 }
@@ -236,9 +236,12 @@
   margin-top: 2em;
 }
 #fontsampler-admin small {
-  font-size: x-small;
+  color: #AAA;
+  font-size: small;
   font-family: sans-serif;
   line-height: 1em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 #fontsampler-admin .notice {
   border: 1px solid;
@@ -408,4 +411,10 @@
 }
 #fontsampler-admin .fontsampler-initial-font span.initial-font-unselected {
   display: inline-block;
+}
+#fontsampler-admin.fontsampler-admin-hide-legacy-formats .fontsampler-admin-legacy-format {
+  display: none;
+}
+#fontsampler-admin.fontsampler-admin-show-legacy-formats .fontsampler-admin-legacy-format {
+  display: table-row;
 }
