--- a/css/fontsampler-interface.less
+++ b/css/fontsampler-interface.less
@@ -89,7 +89,8 @@
 		}
 
 		select[name="font-selector"],
-		select[name="sample-text"], 
+		select[name="sample-text"],
+		div.font-lister select,
 		.selectric-wide {
             left: -5px;
             padding: 0 5px;
@@ -189,7 +190,7 @@
 	}
 
 	// the actual container of the type sample
-	.fontsampler {
+	.fontsampler, .type-tester__content {
 	    clear: both;
 	    margin-bottom: 20px;
 		margin-top: 0.25em;
