improved frontend integration of specimen tools, automatic opentype feature checkboxes for fonts

--- a/css/fontsampler-interface.css
+++ b/css/fontsampler-interface.css
@@ -391,10 +391,10 @@
   position: absolute;
   width: auto;
   right: 0;
-  top: 30px;
+  top: 35px;
   text-align: right;
   background: #ffffff;
-  height: 30px;
+  height: auto;
   padding: 5px;
   z-index: 10;
 }
@@ -404,6 +404,13 @@
 .fontsampler-wrapper .fontsampler-interface .fontsampler-opentype-features button.fontsampler-toggle {
   height: 20px;
   width: 20px;
+}
+.fontsampler-wrapper .fontsampler-interface .fontsampler-opentype-features fieldset {
+  display: block;
+  margin: 0;
+  border: 0;
+  height: auto;
+  padding: 0 10px;
 }
 .fontsampler-wrapper .fontsampler,
 .fontsampler-wrapper .type-tester__content {
