--- a/css/fontsampler-interface.less
+++ b/css/fontsampler-interface.less
@@ -171,10 +171,10 @@
             position: absolute;
             width: auto;
             right: 0;
-            top: 30px;
+            top: 35px;
             text-align: right;
             background: #ffffff;
-            height: 30px;
+            height: auto;
             padding: 5px;
 			z-index: 10;
 
@@ -186,6 +186,14 @@
                 height: 20px;
                 width: 20px;
             }
+
+			fieldset {
+				display: block;
+				margin: 0;
+				border: 0;
+				height: auto;
+				padding: 0 10px;
+			}
         }
 	}
 
