--- a/css/fontsampler-interface.less
+++ b/css/fontsampler-interface.less
@@ -169,14 +169,16 @@
         .fontsampler-opentype-features {
             display: none;
             position: absolute;
-            width: auto;
             right: 0;
             top: 35px;
             text-align: right;
             background: #ffffff;
             height: auto;
-            padding: 5px;
+			text-align: left;
+			padding: 5px;
+			width: 100%;
 			z-index: 10;
+
 
             &.shown {
                 display: block;
@@ -192,7 +194,12 @@
 				margin: 0;
 				border: 0;
 				height: auto;
-				padding: 0 10px;
+				padding: 10px;
+
+				label {
+					float: left;
+					width: 50%;
+				}
 			}
         }
 	}
