--- a/css/fontsampler-interface.less
+++ b/css/fontsampler-interface.less
@@ -162,46 +162,52 @@
 			}
 		}
 
-        .fontsampler-opentype-toggle {
 
-        }
+		.fontsampler-opentype {
+			&.feature-lister__features-empty {
+				display: none;
+			}
 
-        .fontsampler-opentype-features {
-            display: none;
-            position: absolute;
-            right: 0;
-            top: 35px;
-            text-align: right;
-            background: #ffffff;
-            height: auto;
-			text-align: left;
-			padding: 5px;
-			width: 100%;
-			z-index: 10;
+			.fontsampler-opentype-toggle {
 
+			}
 
-            &.shown {
-                display: block;
-            }
-
-            button.fontsampler-toggle {
-                height: 20px;
-                width: 20px;
-            }
-
-			fieldset {
-				display: block;
-				margin: 0;
-				border: 0;
+			.fontsampler-opentype-features {
+				display: none;
+				position: absolute;
+				right: 0;
+				top: 35px;
+				text-align: right;
+				background: #ffffff;
 				height: auto;
-				padding: 10px;
+				text-align: left;
+				padding: 5px;
+				width: 100%;
+				z-index: 10;
 
-				label {
-					float: left;
-					width: 50%;
+				&.shown {
+					display: block;
+				}
+
+				button.fontsampler-toggle {
+					height: 20px;
+					width: 20px;
+				}
+
+				fieldset {
+					display: block;
+					margin: 0;
+					border: 0;
+					height: auto;
+					padding: 10px;
+
+					label {
+						float: left;
+						width: 50%;
+					}
 				}
 			}
-        }
+		}
 	}
 
 	// the actual container of the type sample
