--- a/css/fontsampler-interface.less
+++ b/css/fontsampler-interface.less
@@ -3,6 +3,18 @@
 
 .fontsampler-wrapper {
 
+	&.on-loading {
+		> * {
+			opacity: 0;
+			transition: opacity 0s;
+		}
+	}
+
+	> * {
+		opacity: 1;
+		transition: opacity 0.2s ease-in-out;
+	}
+
 	.fontsampler-interface {
 
 		.fontsampler-interface-row {
