--- a/admin/css/fontsampler-admin.css
+++ b/admin/css/fontsampler-admin.css
@@ -273,9 +273,33 @@
   overflow: auto;
 }
 #fontsampler-admin footer li {
+  box-sizing: border-box;
   display: inline-block;
   float: left;
-  margin-right: 1em;
+  padding-right: 1em;
+  width: 20%;
+  max-width: 120px;
+}
+#fontsampler-admin footer li > a {
+  display: block;
+  height: 0;
+  padding-top: 62.5%;
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+#fontsampler-admin footer li > a img {
+  display: block;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+}
+#fontsampler-admin footer li > img {
+  display: block;
+  height: 12.5%;
+  width: 100%;
 }
 #fontsampler-admin .info,
 #fontsampler-admin .note,
