--- a/admin/css/fontsampler-admin.less
+++ b/admin/css/fontsampler-admin.less
@@ -141,9 +141,35 @@
             overflow: auto;
         }
         li {
+            box-sizing: border-box;
             display: inline-block;
             float: left;
-            margin-right: 1em;
+            padding-right: 1em;
+            width: 20%;
+            max-width: 120px;
+
+            > a {
+                display: block;
+                height: 0;
+                padding-top: 150/240*100%;
+                position: relative;
+                text-align: center;
+                width: 100%;
+
+                img {
+                    display: block;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    position: absolute;
+                }
+            }
+            > img {
+                display: block;
+                height: 150/240*100/5%;
+                width: 100%;
+            }
         }
     }
 
