--- a/css/fontsampler-interface.css
+++ b/css/fontsampler-interface.css
@@ -434,7 +434,7 @@
   margin-bottom: 20px;
   margin-top: 0.25em;
   transition: all 0.2s ease-out;
-  padding: 0.5em 0;
+  padding: 0.25em 0.15em;
 }
 .fontsampler-wrapper .fontsampler:focus,
 .fontsampler-wrapper .type-tester__content:focus {
