--- a/css/fontsampler-interface.less
+++ b/css/fontsampler-interface.less
@@ -228,7 +228,7 @@
 	    margin-bottom: 20px;
 		margin-top: 0.25em;
 		transition: all 0.2s ease-out;
-		padding: 0.5em 0;
+		padding: 0.25em 0.15em;
 
 		&:focus {
 			outline: none;
